--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,10 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
-}
+    position: fixed;}
 li {
     float: left;
-    border-right: 1px solid #bbb;
+    border-right: 1px solid silver;
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
 }
@@ -20,8 +19,10 @@ li a {
     text-decoration: none;
 }
 li a:hover {
-    background-color: #04AA6D;
+    background-color: silver;
+    transition: 0.5s;
+
 }
 .active {
-    background-color: aqua;
+    background-color: #0085CA;
 }
