--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;}
+    position: fixed;
+    }
 li {
     float: left;
     border-right: 1px solid silver;
@@ -26,4 +27,19 @@ li a:hover {
 .active {
     background-color: #0085CA;
 }
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0085CA;
+}
+
+container {
+    display: flex;
+    object-fit: fit;
+    margin-bottom: 20px;
+}
+
+
 
